# SemanticVLA_Offcial

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
deployment/model_server/: predict_action_offline.py  server_policy.py
docs/: ACKNOWLEDGEMENTS.md  DATASETS.md  INFERENCE.md  METHOD.md  TRAINING.md  make_qr.py
examples/LIBERO/: eval_libero.py  eval_libero.sh  generate_libero_modality_json.py  lam_libero_dataset.py  model2libero_interface.py  precompute_lam_labels.py  prepare_libero_lerobot_data.sh  run_libero_train.sh  run_libero_train_4gpu.sh  run_policy_server.sh  train_lam.py  train_semanticvla.py  validate_libero_lerobot_data.py
examples/OXE/: oxe_lam_dataset.py  precompute_lam_labels_oxe.py  rlds_tfrecord.py  train_lam_oxe.py  train_oxe_vla.sh
examples/SimplerEnv/: aggregate_simpler_eval_batch.py  generate_oxe_modality_json.py  model2simpler_interface.py  prepare_bridge_checkpoint.sh  prepare_oxe_lerobot_data.sh  run_policy_server_official.sh  run_simpler_eval_manifest.py  start_server.sh  start_simpler_env.py  start_simpler_env.sh  start_simpler_env_ms3.py  start_simpler_env_ms3.sh  test_your_simplerEnv.py  validate_oxe_lerobot_data.py
semanticvla/dataloader/: __init__.py  lerobot_datasets.py  qwen_success_npz.py  vlm_datasets.py
semanticvla/model/: tools.py
semanticvla/training/: train.py  train_cotrain.py
tools/rlds_to_lerobot/: README.md  add_trace_column.py  build_trace_index.py  combine_bcz_train_val_full_preserve.py  convert.py  convert_bridge_v21_to_v30_tracex.py  convert_droid_trace_selection.py  convert_full_preserve.py  convert_v21_to_v30_tracex.py  env.yaml  normalize_bcz_val_dense_trace.py  report_hf_upload_progress.py  upload_bridge_v30_tracex_to_hf.py  upload_tracex_to_hf.py  upload_tracex_v30_to_hf.py  verify_trace_lerobot.py
tools/simpler/: summarize_simpler_eval.py
tools/trace_annotation/: README.md
tools/visualize/: README.md  (+2 more)
(+86 files in other folders)
